# ecm

./: CMakeLists.txt  EM_algorithm_complex.cpp  codon_frequency.cpp  expectation_step.cpp  expectation_step.h  garbages.cpp  main.cpp  maximization_step.cpp  maximization_step.h  newick.cpp  newick.h  njtree.cpp  njtree.h  process_maf.cpp  process_maf.h
